--- a/dissertation.bib
+++ b/dissertation.bib
@@ -4814,9 +4814,11 @@ The results are important because they suggest that by targeting depressive symp
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/BECSX8D3/Revelle_Condon-2017-Reliability.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/24DSPMVD/jgwm4.html}
 }
 
-@article{mottus,
+@article{mottus2018,
   title = {Kids Becoming Less Alike: {{A}} Behavioral Genetic Analysis of Developmental Increases in Personality Variance from Childhood to Adolescence},
   shorttitle = {Kids Becoming Less Alike},
+  journaltitle = {Journal of Personality and Social Psychology},
+  date = {2018},
   author = {Mõttus, René and Briley, Daniel A. and Zheng, Anqing and Mann, Frank D. and Engelhardt, Laura E. and Tackett, Jennifer L. and Harden, K. Paige and Tucker-Drob, Elliot M.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/7HREN6EV/Kids-becoming-less-alike-A-behavioral-genetic-analysis-of-developmental-increases-in-personality-variance-from-childhood-to-adolescence.pdf}
 }
@@ -6615,14 +6617,6 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   author = {Richards, Maryse H. and Crowe, Paul A. and Larson, Reed and Swarr, Amy}
 }
 
-@article{larson,
-  langid = {english},
-  title = {Changes in {{Adolescents}}' {{Daily Interactions With Their Families From Ages}} 10 to 18: {{Disengagement}} and {{Transformation}}},
-  pages = {11},
-  author = {Larson, Reed W and Moneta, Giovanni and Richards, Maryse H and Holmbeck, Grayson and Duckett, Elena},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LCZK3Y7T/Larson et al. - Changes in Adolescents' Daily Interactions With Th.pdf}
-}
-
 @article{collins2009,
   langid = {english},
   title = {Adolescent {{Romantic Relationships}}},
@@ -7176,6 +7170,32 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   pages = {417-428},
   author = {Kiefer, Sarah M. and Ryan, Allison M.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/KZWXG9RH/Kiefer and Ryan - 2008 - Striving for social dominance over peers The impl.pdf}
+}
+
+@article{larson1996,
+  title = {Changes in Adolescents' Daily Interactions with Their Families from Ages 10 to 18: {{Disengagement}} and Transformation},
+  volume = {32},
+  issn = {1939-0599(Electronic),0012-1649(Print)},
+  doi = {10.1037/0012-1649.32.4.744},
+  shorttitle = {Changes in Adolescents' Daily Interactions with Their Families from Ages 10 to 18},
+  abstract = {In a cross-sequential study spanning 5th-12th grade, 220 White working-and middle-class youth provided reports on their experience at 16,477 random moments in their lives. Amount of time spent with family was found to decrease from 35\% to 14\% of waking hours across this age period, indicating disengagement. However, transformation and continued connection were evident in stability across age in time talking and alone with parents; an age increase in family conversation about interpersonal issues, particularly for girls; and with age, adolescents' more frequent perception of themselves as leading interactions. After a decrease in early adolescence, older teens reported more favorable affect in themselves and others during family interactions. Last, the age decline in family time was found to be mediated not by internal family conflict but by opportunities and pulls an adolescent experiences from outside the family. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  number = {4},
+  journaltitle = {Developmental Psychology},
+  date = {1996},
+  pages = {744-754},
+  keywords = {Adolescent Development,Family Relations,Longitudinal Studies},
+  author = {Larson, Reed W. and Richards, Maryse H. and Moneta, Giovanni and Holmbeck, Grayson and Duckett, Elena},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LCZK3Y7T/Larson et al. - Changes in Adolescents' Daily Interactions With Th.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/GJILEPYJ/1996-01781-017.html}
+}
+
+@article{baltes1997,
+  langid = {english},
+  title = {On the {{Incomplete Architecture}} of {{Human Ontogeny}}},
+  journaltitle = {American Psychologist},
+  date = {1997},
+  pages = {15},
+  author = {Baltes, Paul B},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/M324EUTK/Baltes - 1997 - On the Incomplete Architecture of Human Ontogeny.pdf}
 }
 
 
