--- a/index.Rmd
+++ b/index.Rmd
@@ -79,80 +79,68 @@ dissertateUO::preamble_for_title(
 ```
 
 <!-- Chapter 4 -->
-\chapter{Conclusions}
+\chapter{Discussion}
 
-- This study reveals that people do not behave on the SPLT in ways that are consistent with it being sensitive to individual differences in social motives.
-    - This presents an interpretive conundrum.
-    - It is clear that there is a salience effect of the social-motive domain stimuli that enhances learning relative to the minimally social condition.
-    - There is no relation between this salience effect and development, or self-report motives in these data.
-    - One possibility is that motive differences do not result in differences in the salience of stimuli that are relevant to those motives.
-      - This conclusion would be a damning falsification of theories about attention-reward contingincies set up by the interaction between a person and her environment [@mackintosh1975;@grossberg1975;@kruschke2011]. Such an attack on the hard core of these theories is unwaranted.
-      
+The goals of this investigation were to examine how reinforcement learning is affected by adolescent-relevant social motives, and to look for evidence that individual differences in this effect are due to individual tendencies in the strength of these motives.
+It is clear that there were salience effects of the social-motive framing of stimuli that leads to enhanced learning relative to the minimally social condition.
+However, it is also clear that individual differences in this effect are not strongly influenced by individual differences in social motives.
+Age, puberty, self-report trait, and health-related behaviors all showed negligibly small associations with individual differences in the social-motive effects on task performance and model parameters.
+This presents an interpretive conundrum.
 
-One motivation behind the present work was a dissatisfaction with the explanatory power of the construct of sensation-seeking (also cast sometimes as reward-seeking), especially it is applied to the study of adolescent behavior and decision making.
-As it is commonly construed, and as is evident in the item content of many sensation-seeking scales, this construct is thought to capture a person's tendency to act in spite of perceived risk or danger, independent of any particular specific goal or motivation.
-For example, in the UPPS-P, "I quite enjoy taking risks," "I would like to go scuba diving," or "I like sports and games in which you have to choose your next move very quickly," are all considered equally adequate indicators of this construct.
-Drinking, driving fast, and engaging in less-safe sex may all plaubily be hypothesized as behavioral correlates of sensation seeking that we care about in adolescent research.
-Often left unexamined and unspecified is why those particular risks might be selected instead of others.
+One possibility is that individual differences in social motives do not result in differences in the salience of stimuli that are relevant to those motives.
+The rich history of work on attention-reward contingencies elicited by the interaction of a person with her environment makes this possibility seem very unlikely [@mackintosh1975;@grossberg1975;@kruschke2011]. 
+A more likely possibility, explored further below in the section on limitations, is that the stimuli and framing used in this task were not actually relevant, in the participants' perception, to the social motives we sought to explore.
+Another, perhaps equally plausible, possibility is that information about dating and popularity is too relevant to almost everyone, regardless of their personal level of motivation.
 
-Taking into account more specific motivations that lead individuals to behave in ways that may be congruent with those motives may add important nuance to our understanding of decision making during adolescence and early adulthood.
-For example, the FSMI Mate-seeking and Status items seem to ask about social goals (finding a ro0mantic partner, gaining status), whereas the K-SRQ Sexual Relationships and Admiration items ask the participant to consider their enjoyment of specific behaviors (flirting, receiving recognition) that are clearly related to those goals but are neither necessary nor sufficient for them. 
-In this investigation, associations between motive variables and behavior outcomes over and above UPPS-P subscales provide some evidence for the usefulness of taking into account this level of specificity.
-However, there is still only a nebulous taxonomic structure connecting the constructs in these scales.
-A more full exploration of the relation between these constructs, and description of their hierarchy, would be desirable.
+Perhaps it is the case that from even early adolescence, people understand that it is important to learn as well as possible signals in the social world about dating and popularity, regardless of one's own motives in relevant domains.
+In the domain of social status, this is in line with work that suggests status misperception can incur a social cost regardless of one's position [@srivastava2011].
+Learning who is popular may be such a basic skill in forming accurate-enough impressions of social hierarchies that there is not room for status motives to affect learning.
+This same sort of ceiling effect is just as applicable to the mate-seeking condition.
 
 # Limitations
 
-- Reasons that this task may not be a good measure of motives
-  - Learning may be obviously irrelevant to actual social goals participants have. That is, learning about the popularity of a computer-generated face may not be enhanced by a persons status motives because it is clear that this information is not instrumentally valuable for satisfying that motive. However, we did not ask participants whether they felt like they learned something that could help them in their daily lives (that is, we did not assess whether they thought there was some true, learned association between facial characterstics and either dating or social status).
-  - The proportion of variance in the median parameter estimates (for learning parameters, or performance estimates) versus variance due to uncertaintly in those estimates was generally low. As is the case with many laboratory tasks, and especially those that use binary choice outcomes, this indicates low measurement quality. As such, any true relation between self-report scales or behaviors would be poorly estimated.
-  - Correspondence between task-behavior and self-report measures of the same construct are generally low [@harden2017] (ALSO POLDRACK SLIDES)
-- Minimal stimulus set only examines a small slice of the kinds of things that may be relevant for mate-seeking and status motives.
-  - reliability of salience differences may be enhanced by accounting for variation induced by stimuli.
+The possible explanations for null results discussed above have to do with substantive relations between motives and learning.
+There are also explanations for null results that have more to do with instrumentation and procedure than with anything theoretically very meaningful.
+For example, participants may accurately perceive that learning the face-word associations on this task is actually irrelevant to fulfilling their social motives.
+Learning might be enhanced in the social conditions just because it is slightly more interesting to imagine these computer generated faces being popular, or dating, than it is to imagine that they are hungry, but the participants' own motives never enter into the picture because it is obvious that whatever is learned during the task will not be instrumental in meeting new romantic partners or gaining the admiration of their peers.
 
-- Self-report questionnaires
+The reliable variance in task behavior and model-derived variables may have been somewhat low, and thereby attenuated the observable correlation with the criteria measures.
+This is a problem more generally with measuring latent variables using only binary responses, even if accounting for task structure with the computational model does help somewhat.
+Compounding this problem is the possibility that the method itself is responsible for some proportion of the variance measured by both the task, and self-report scales.
+Correspondence between task-behavior and self-report measures of the same ostensible construct has been shown to be rather low across a wide range of commonly used adolescent risk-taking measures [@harden2017].
+Whether this is due to method variance, or problems with the construct validity, this task may be another example of this problem.
 
-# Strengths 
+Some measurement problems, including skewed responding, extreme latent variable covariance, and unexpectedly patterns of latent variable correlation also may limit the degree of certainty in the construct validity of the self-report measures.
+This is not to suggest that these instruments are not responsive to some true signal, as is suggested by their association to self-reported health-related behaviors.
+Rather, these issues suggest that further work could be done to refine the conceptual space, and thereby produce more accurate instruments that measure more well-defined constructs that are structurally better situated in a more valid taxonomy.
+Such refinement might both raise the ceiling on the magnitude of observable relations, and also allow more straightforward interpretation of these relations.
 
-Even given the above limitations, this research may still provide important insights to how reinforcement learning works, and is studied in developmental populations.
-
-- Even though we cannot generalize to a domain of social information, it is clear what is being learned.
-  - Each face is associated with a single trait, and learning about that trait does not require that a participant have an understanding of a latent construct that causes that trait to enable such learning
-  - This is an important future direction and actually could be potentially be a method used to probe the inferential structure of social information.
-- Although all information in this task is social, there are clear differences in the type of social information available to be learned in each condition.
-  - being hungry or thirsty is socially relevenat information for the dyad (the participant and the target face).
-  - H/T does not convey information beyond this single hop.
-  - D/L and P/U _does_ convey information two hops beyond the participant.
-    - D/L conveys information about a relation between two people beyond the single-hop distance of participant and target
-    - P/U conveys information about the target's indegree centrality
-  - H/T may be relevant information for affiliation (or pro-social) motives. However, popularity and dating-status is also relevant social information that is useful and important for affiliation motives.
-  - This clarity stands in contrast to previous work that has used unstructured item-preference information [e.g., @rosenblau2017].
-
-# Conclusions
-
-- If I were to make the mistake of drawing a strong clonclusion from the very-close-to-zero relations between salience differences, and development and self-report motives, I would say that by age 12 years or so, people understand that it is important to learn as well as possible signals in the social world about dating and popularity, regardless of one's own motives in relevant domains.
-  - In the domain of social status, this is in line with work that suggests status inaccuracy can incurring a social cost regardless of position [@srivastava2011].
-- Results from the self-report instruments demonstrate a greater degree of construct validity.
-  - Self-report traits scales show correlations with self-report behaviors that broadly support their validity. For example, people who are in relationships don't think much about meeting new dating partners.
-  - One intrigueing null result is that neither mate-seeking motive scale was associated with use of protection.
-  - (MUCH MORE ABOUT STATUS AND DRINKING, AND RELATION TO SENSATION SEEKING)
-- Though this task is unlikely to be a robust measure of individual differences in motives, the technique of manipulating the framing of stimuli does show some usefulness for using group-averaged, within-person differences to study how stimulus content impacts learning on average.
-- Future work could expand on this paradigm by expanding the content to test broader stuctural hypotheses regarding what kinds of social information is most salient.
-
-
+There are also potential issues with generalizing from the effect of the present experimental manipulations to the population of possible manipulations related to the motivational constructs of interest.
+The results from the SPLT can really only tell us about people's responses to the particular manipulations that were used in this experiment.
+In order to infer back to the population of all status- and mate-seeking-related manipulations, we would need to account for the variance in responding to those various manipulations, either by estimating that variance from a small sample of those possible manipulations, or by incorporating a very large number of them into the design [@westfall2017].
+Being able to generalize to this population of manipulations is also an important step in generalizing the effect of _a particular_ status- or mate-seeking-relevant stimulus to the effect of the motive-relevance of stimuli more generally.
+Indeed, given that only one manipulation for each motive domain was used, it is not even possible to estimate whether these represent very good, or very bad manipulations of motive-relevance.
 
 # Future directions
 
-- There is a large space for variation on standard RL tasks.
-  - Many ways to manipulate stability, informational content (learning about worthwhile meaningful things, relations), and reward (intrinsically rewarding, or instrumentally rewarding).
-- There is a huge problem to solve with regard to individual variation.
-  - Binary choice tasks are probably too insensitive to underlying varriability in cognition.
-  - Detection of differences in cognitive parameters require so many trials because they rely on differences in patterns of responding.
-  - Future studies that employ laboratory tasks to examine social-goal behavior could allow increase response options, provide task structure that reveals preferences more quickly, or that combines instrumental learning with utilization of information in the relevant domain.
-    - For example, one might index preference for learning about certain kinds of information above other types.
-      - The diverse set of stimuli used by @rosenblau2017 is a step in this direction.
-    - One might ensure that rewards for correct responses are able to be used in persuit of domain-relevant goals.
-  - Reinforcement learning is a very well understood model cognitive process, and it makes simplifying assumptions that are well characterized and can be relaxed in interesting ways to enhance predictive validity. However, when used as a tool to probe variation in learning due to either development, or content domain, the simplifying assumptions may intersect in poorly characterized ways with features of the substantive domain of interest. Though this study does examine the influence of a few simplifying assumptions on the inferences made about learning in the social-motives domain, there are entire classes of learning models [e.g., instance based learning; @gonzalez2003a; and model-based learning; @decker2016] that are not tested, or are not possible to test, in these data. 
-  - Ultimately, it is domain-relevant behavior that can constrain inferences. In this study, we ensure that all results are interpretted in light of the optimal choice behavior in each condition. Making inferences about learning parameters with no reference to this behavior would put all of the burden on the correctness of the learning model.
+Although this task is unlikely to be a robust measure of individual differences in motives, the technique of manipulating the framing of stimuli does show promise for future work that would use it to estimate group-averaged, within-person differences in how particular stimulus characteristics affect learning.
+Future work could expand on this paradigm by expanding the content to test broader structural hypotheses regarding what kinds of social information is most salient.
+There are many ways to expand on reinforcement learning tasks like the SPLT.
+Since environmental stability is another factor that may influence the expression of these motives, one might manipulate the stability of the learning environment in different domains to examine advantageous or disadvantageous propensities to change one's mind about previously learned social information [@brumbach2009].
 
+Allowing participants to have more control over the type of content that is learned by allowing both exploration and exploitation during the learning task may be a way to increase the diversity of stimuli, as well as examine how structural relationships between pieces of information influences what kinds of social information participants choose to learn about.
+At least one study, discussed in the previous chapter, took a step in this direction by allowing participants to learn about specific preferences, though there was not much attention given to how this set up could be more fully exploited [@rosenblau2017].
+One possibility would be to use information that is instrumental to goal pursuit as the reward feedback, rather than as content to be learned.
 
+Examining different models for learning may also enhance future work.   
+Reinforcement learning models like the one used in these analyses have a long history, and are very well understood. 
+This model does, of course, make certain simplifying assumptions about latent cognitive process.
+However, without exploring multiple different models that could possibly characterize the learning process, it is not possible to assess which model features substantive results are sensitive to.
+Though this study does examine the influence of a few model features (i.e., inclusion of bias and reward modifier parameters), there are entire classes of learning models [e.g., instance based learning; @gonzalez2003a; and model-based learning; @decker2016] that are not tested, or are not possible to test, in these data.
+
+# Conclusions
+
+Reinforcement learning is enhanced by the social-motive framing manipulation, though individual difference correlations leave it ambiguous as to whether this is due to the words' relevance to social motives, or some other property.
+Generally, older participants performed more optimally during the learning task, which was reflected in better focus (smaller $\xi$), and possibly higher sensitivity to reward (higher $\rho$).
+Self-report trait questionnaires that measure specific motivations were sometimes helpful for accounting for health-related behaviors, and with regard to normative sexual behavior, this was the case even over and above more general measures of impulsivity and sensation seeking.
+Important future directions include further elaboration of learning paradigms, both to increase precision and expand content coverage, and refinement of motivational taxonomies and measurement instruments.
