--- a/dissertation.bib
+++ b/dissertation.bib
@@ -4577,6 +4577,26 @@ The results are important because they suggest that by targeting depressive symp
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JWRJJ7K2/Lopez-Persem et al. - 2017 - Choose, rate or squeeze Comparison of economic va.pdf}
 }
 
+@article{westfall2017,
+  title = {Fixing the Stimulus-as-Fixed-Effect Fallacy in Task {{fMRI}}},
+  volume = {1},
+  issn = {2398-502X},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5428747/},
+  doi = {10.12688/wellcomeopenres.10298.2},
+  abstract = {Most functional magnetic resonance imaging (fMRI) experiments record the brain’s responses to samples of stimulus materials (e.g., faces or words). Yet the statistical modeling approaches used in fMRI research universally fail to model stimulus variability in a manner that affords population generalization, meaning that researchers’ conclusions technically apply only to the precise stimuli used in each study, and cannot be generalized to new stimuli. A direct consequence of this
+stimulus-as-fixed-effect fallacy is that the majority of published fMRI studies have likely overstated the strength of the statistical evidence they report. Here we develop a Bayesian mixed model (the random stimulus model; RSM) that addresses this problem, and apply it to a range of fMRI datasets. Results demonstrate considerable inflation (50-200\% in most of the studied datasets) of test statistics obtained from standard “summary statistics”-based approaches relative to the corresponding RSM models. We demonstrate how RSMs can be used to improve parameter estimates, properly control false positive rates, and test novel research hypotheses about stimulus-level variability in human brain responses.},
+  journaltitle = {Wellcome Open Research},
+  shortjournal = {Wellcome Open Res},
+  urldate = {2017-12-14},
+  date = {2017-03-17},
+  keywords = {_diss},
+  author = {Westfall, Jacob and Nichols, Thomas E. and Yarkoni, Tal},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/KF5ZBTNP/Westfall_et_al-2016-Fixing_the_stimulus-as-fixed-effect_fallacy_in_task_fMRI.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/VE8DGGIQ/Westfall_et_al-2017-Fixing_the_stimulus-as-fixed-effect_fallacy_in_task_fMRI.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/HF3AGDZQ/077131.html},
+  eprinttype = {pmid},
+  eprint = {28503664},
+  pmcid = {PMC5428747}
+}
+
 @article{peters2017,
   langid = {english},
   title = {Increased Striatal Activity in Adolescence Benefits Learning},
@@ -7196,6 +7216,70 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   pages = {15},
   author = {Baltes, Paul B},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/M324EUTK/Baltes - 1997 - On the Incomplete Architecture of Human Ontogeny.pdf}
+}
+
+@article{cairns1995,
+  langid = {english},
+  title = {Friendships and {{Social Networks}} in {{Childhood}} and {{Adolescence}}: {{Fluidity}}, {{Reliability}}, and {{Interrelations}}},
+  volume = {66},
+  issn = {0009-3920, 1467-8624},
+  url = {http://doi.wiley.com/10.1111/j.1467-8624.1995.tb00938.x},
+  doi = {10.1111/j.1467-8624.1995.tb00938.x},
+  shorttitle = {Friendships and {{Social Networks}} in {{Childhood}} and {{Adolescence}}},
+  number = {5},
+  journaltitle = {Child Development},
+  urldate = {2018-07-17},
+  date = {1995-10},
+  pages = {1330-1345},
+  author = {Cairns, Robert B. and Leung, Man-Chi and Buchanan, Lisa and Cairns, Beverley D.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/GKABH7QC/Cairns et al. - 1995 - Friendships and Social Networks in Childhood and A.pdf}
+}
+
+@article{steinberg2001,
+  title = {Adolescent {{Development}}},
+  volume = {52},
+  url = {https://doi.org/10.1146/annurev.psych.52.1.83},
+  doi = {10.1146/annurev.psych.52.1.83},
+  abstract = {This chapter identifies the most robust conclusions and ideas about adolescent development and psychological functioning that have emerged since Petersen's 1988 review. We begin with a discussion of topics that have dominated recent research, including adolescent problem behavior, parent-adolescent relations, puberty, the development of the self, and peer relations. We then identify and examine what seem to us to be the most important new directions that have come to the fore in the last decade, including research on diverse populations, contextual influences on development, behavioral genetics, and siblings. We conclude with a series of recommendations for future research on adolescence.},
+  number = {1},
+  journaltitle = {Annual Review of Psychology},
+  urldate = {2018-07-17},
+  date = {2001},
+  pages = {83-110},
+  author = {Steinberg, Laurence and Morris, Amanda Sheffield},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/NZBK7E7X/Steinberg and Morris - 2000 - ADOLESCENT DEVELOPMENT.pdf},
+  eprinttype = {pmid},
+  eprint = {11148300}
+}
+
+@article{cavazos-rehg2009,
+  title = {Age of Sexual Debut among {{US}} Adolescents},
+  volume = {80},
+  issn = {0010-7824},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3064497/},
+  doi = {10.1016/j.contraception.2009.02.014},
+  abstract = {Background
+This study examined gender and racial/ethnic differences in sexual debut.
+
+Study Design
+We analyzed 1999–2007 data from the Youth Risk Behavior Surveillance System (YRBSS), a cross-sectional, nationally representative survey of students in Grades 9–12 established by the Centers for Disease Control and Prevention. The Kaplan–Meier method was used to compute the probability of survival (not having become sexually active) at each year (age 12 through 17), and separate estimates were produced for each level of gender and racial/ethnic group.
+
+Results
+African-American males experienced sexual debut earlier than all other groups (all tests of significance at p$<$.001) and Asian males and females experienced sexual debut later than all groups (all tests of significance at p$<$.001). By their 17th birthday, the probability for sexual debut was less than 35\% for Asians (females 28\%, males 33\%) and less than 60\% for Caucasians (58\% females, 53\% males) and Hispanic females (59\%). The probability for sexual debut by their 17th birthday was greatest for African Americans (74\% females, 82\% males) and Hispanic males (69\%).
+
+Conclusions
+These results demonstrate a need for sexual education programs and policy to be sensitive to the roles of race and ethnicity in sexual debut.},
+  number = {2},
+  journaltitle = {Contraception},
+  shortjournal = {Contraception},
+  urldate = {2018-07-17},
+  date = {2009-08},
+  pages = {158-162},
+  author = {Cavazos-Rehg, Patricia A. and Krauss, Melissa J. and Spitznagel, Edward L. and Schootman, Mario and Bucholz, Kathleen K. and Peipert, Jeffrey F. and Sanders-Thompson, Vetta and Cottler, Linda B. and Bierut, Laura Jean},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/4ITLGWDL/Cavazos-Rehg et al. - 2009 - Age of sexual debut among US adolescents.pdf},
+  eprinttype = {pmid},
+  eprint = {19631791},
+  pmcid = {PMC3064497}
 }
 
 
