--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -4,75 +4,70 @@ bibliography: "/home/jflournoy/code_new/social-motives-rl-writeup/dissertation.b
 csl: "/home/jflournoy/Rlibs/probly/bib/apa-old-doi-prefix.csl"
 ---
 
-Adolescents is a period of biological development between childhood and adulthood marked both by vigorous health as well as increases in risk to health.
-An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013].
-Health risking behavior and rates of unintentional injury describe a trajectory that peaks toward late adolescence.
-This gives rise to the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004].
+Adolescence, the period of development between childhood and adulthood, is a time of both vigorous health and increased health risks.
+An extensive body of literature describes trajectories in the rates of health-risking behaviors like binge drinking [@chassin2009;@patrick2011], and risky sexual behavior [@stevenson2007] that, along with rates of unintentional injury, peak during late adolescence and early adulthood [@centersfordiseasecontrolandprevention2003;@willoughby2013].
+A major focus of the field of adolescent developmental psychology and neuroscience is to describe what gives rise to this phenomenon.
+A variety of theories current in this field may capture many features of adolescent cognition and behavior that have relevance for health-related decisions, but most do not focus on functional aspects of behavior.
+Taking a more explicitly functional approach will help to strengthen and unify our understanding of behavior during this transition into adulthood.
 
-Current conceptualizations in the field capture many features of adolescence relevant to health-related decisions, but focusing on functional aspects of behavior (which many of these theories acknowledge as important) will help to strengthen and unify these approaches.
-Imperfect information, or exaggerated expectations of invincibility, were ideas proposed early on to account of health-risk behavior during adolescents.
-However, on most questions, adolescents show no particular bias toward over or underestimating probabilities, though their estimation is not perfect; and those probabilities do generally correlate with prospective outcomes [@debruin2007;@fischhoff2000;@fischhoff2008].
-The one prediction that is aberrant is that teens overestimate their probability of dying, which may be functionally relevant to enhancing the value of immediate rewards, especially if those rewards are relevant for thriving and reproductive fitness in the near-term.
 
-Another recent approach proposes that evidence from neuroscience reveals an imbalance between sets of action-promoting, and action-inhibiting processes, and that this developmental imbalance is a cause of risk-taking behavior.
-In fact, there are several similar theories that are cast in variations of this basic idea.
+One early attempt to explain adolescent decision making proposed that youth were making decisions based on imperfect information, or exaggerated expectations of invincibility.
+However, on most questions, adolescents show no particular bias toward over or underestimating probabilities, though their estimation is not perfect; the probabilities they estimate also generally correlate with prospective outcomes [@debruin2007;@fischhoff2000;@fischhoff2008].
+Adolescents do, however, overestimate their probability of dying, which may be functionally important if it enhances the value of immediate rewards, especially if those rewards are relevant for thriving and reproductive fitness in short-term time frames.
+
+Some more recent approaches use evidence from neuroscience to describe an imbalance between action-promoting, and action-inhibiting processes that is thought to be a cause of risk-taking behavior.
+Two distinct theories are variations on this idea.
 The dual systems model suggest that during adolescence, the system that encodes socially and emotionally rewarding stimuli increases its sway on behavior more rapidly than cognitive control does [@shulman2016].
-The imbalance model proposes that there is not a miscalibration of the balance of power between two systems, but rather that there is a developmentally emerging optimality of balance between multiple systems [@casey_beyond_2016].
-No approach in this vein accounts directly for why adolescents find certain behaviors, rather than others, more rewarding.
+The imbalance model proposes that the miscalibration is not just between two systems, but rather that an optimal balance between multiple systems is still developing [@casey_beyond_2016], and that this global imbalance leads to risky behavior.
+No approach in this vein deals directly with why certain behaviors are more likely to be selected by the psychological processes or neural systems that hold an excess of power during adolescence.
 
-Two other theories do address functional aspects of adolescent decision making.
+Two other theories do address certain functional aspects of adolescent decision making.
 Social reorientation theory suggest that during adolescence, individuals shift their dominant social network from the family to peers [@nelson2016].
-This shift is in part driven by developmentally appropriate changes in the salience of interactions with peers and potential romantic partners.
-Health-risking behavior may be in part a by-product of differences in what this peer social group values, though the reasons for these value differences have not been fully explicated.
-Fuzzy trace theory also has relevance for helping to explain the function, if they exist, of decreased sensitivity to uncertainty (i.e., risk) during adolescence.
-This theoretical framework posits that adolescents have yet to developed heuristics that tend to govern more experienced, adult decisions making, and so are more willing to explore the full problem space in order to develop more adult like heuristics [@romer2017].
-If some possible outcomes are negative with respect to health, then this puts adolescents at risk of adverse consequences.
-This exploration and learning about probabilistic outcomes is proposed to be an essential task of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@blakemore2014;@crone2012;@romer2017].
+This shift is in part driven by developmentally appropriate changes in the salience of interactions with peers and potential romantic partners, which helps motivate adolescents to enter adulthood.
+Health-risking behavior increases are seen, in part, as a by-product of differences between what the family/caregiver network values and what the new peer group values, though the reasons for these value differences are not fully explicated.
 
-Given that adolescent health risking behavior may involve either impulsive _or_ highly cognitively controlled behaviors, a more fully developed framework, borrowed from the literature in economics and neuroeconomics, helps describe the process by which certain behaviors are selected.
-This view goes beyond the ideas of warring systems, some of which push the adolescent to do healthy things, and some of which push the adolescent to do naughty things, describing behavior selection as a process of integration of expected value inputs from myriad sources which culminates in the (perhaps probabilistic) selection of behaviors with high expected value [@pfeifer2018].
-These sources of value inputs may come from basic appetitive processes related to the desire for food or sex, as well as from self concept, social norms, peer expectations, emotional states, \&c.
-From the vantage point of this value-based choice perspective, it becomes clear that adolescent developing motivations for fitness-relevant behaviors related to status and mate-seeking could have a significant impact on value computations.
+Fuzzy trace theory also has relevance for explaining the function of possible decreased sensitivity to uncertainty (i.e., risk) during adolescence.
+This theoretical framework posits that adolescents have yet to develop heuristics that tend to govern more experienced, adult decision making, and so are more willing to explore the full problem space [perhaps, in part, to develop these adult heuristics; @romer2017].
+If some possible outcomes of this exploration are negative health-consequences, then this exploration obviously constitutes health-risking behavior.
+The fuzzy trace perspective, and related views, hold that this exploration is an essential developmental task in adolescence, allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@blakemore2014;@crone2012;@romer2017].
 
-In order to understand health-risking behavior, and decisions making during adolescence more generally, it is important to begin to try to understand the motivational inputs related to evolutionarily relevant developmental tasks.
-This is crucial because differences in various motivations will increases or decreases the expected value of various exploration and exploitation behaviors.
-Examining learning processes directly may be able to provide a window into effects of motivations that influence low level computations such as perception of stimulus salience.
-A substantial body of research documents broad motivational changes in adolescence as captured by the sensation-seeking construct [@harden2011;@steinberg2008;@ruch2001;@zuckerman1978], but very little work examines adolescent motivation at a finer resolution, and none examines the impact of different motivations on stimulus salience and basic learning processes that have the potential to shape an adolescent's relation to the environment. 
+A model of decision-making borrowed from economics can help integrate functional perspectives, and doesn't require problematic neurodevelopment to explain adolescent-specific changes in risk behavior.
+One of the biggest challenges for imbalance models (but not the two, more functional approaches) is that adolescent health risking behavior may involve either impulsive _or_ highly cognitively controlled behaviors.
+The value-based choice view goes beyond the ideas of warring systems, describing decision-making process in which the integration of expected-value inputs from myriad sources culminates in the (perhaps probabilistic) selection of behaviors with large expected values [@pfeifer2018].
+The expected-value inputs may come from basic appetitive processes like desire for food or sex, as well as from self concept, social norms, peer expectations, emotional states, and many others.
+From the vantage point of this perspective, it becomes clear that adolescent developing motivations for fitness-relevant behaviors related to status and mate-seeking could have a significant impact on value computations.
+In other words, if the function of adolescence is to complete the development of the organism to the fully adult form, motivations related to adult social concerns like status and mate-seeking are likely to have increasing weight as inputs to a value-based choice process.
 
-Understanding adolescence as an important period for social development is also necessary for understanding these behavioral and motivational changes [@blakemore2014;@crone2012].
-In fact, many focal adolescent health risks are interpersonal in nature [risky sex, drinking and driving with friends, violence; @kann2014].
-It is unclear what relative proportions of adolescent exploration are of the social versus nonsocial environments, but it is clear that motivational changes occur in a milieu that shapes and is a target of many of the behaviors adolescent researchers care about.
-This proposal describes work that starts to lay an empirical foundation for a descriptive and mechanistic conceptualization of changes in adolescent motivated social behavior.
-The long-term objective of laying this foundation is to illuminate the role of adolescent-developing social motives in health-relevant behaviors and environmental responses.
+In order to understand health-risking behavior, and decisions making during adolescence more generally, it is important to begin to try to understand the motivational inputs that are related to evolutionarily relevant developmental tasks.
+As is described by fuzzy trace theory, adolescents do not yet have decision-making heuristics in place regarding their behavior in these motivational domains, and so they must explore, often using a decision-making approach that makes more fine-grained use of outcome probabilities [@romer2017].
+Differences in various motivations will increase or decrease the expected value of both exploration and exploitation behaviors.
+A substantial body of research documents broad motivational changes in adolescence as captured by the sensation-seeking construct [@harden2011;@steinberg2008;@ruch2001;@zuckerman1978], but very little work examines adolescent motivation at a finer resolution.
+Since learning is the process by which decision-making is influenced by previous experience gained during exploration, examining learning processes directly may be able to provide a window into effects of motivations on decision-making during adolescence.
 
 # Motivations from an Evolutionary Psychology Perspective
 
-Adolescents are notorious for developing normally through the transition from childhood into the adult state.
-We should take the impact of evolutionarily relevant motivations especially seriously because selection pressure is a particularly powerful force shaping biological predisposition through this phase of life [@baltes1997], and there is even some evidence that increases in individual differences during adolescence are strongly shaped by genetic influences [@mottus2018].
-The changes during this period of development include increasing propensity toward adult-like behaviors, such as in sexual activity, and establishing a place in an extra-familial social network.
-Establishing mastery of the social world, and access to material and social resources, is a key concern of this developmental stage.
-Indeed, the developmental end-point of this transition is to a bio-social state in which the chance of successful sexual reproduction and child rearing is optimized.
-Relative to other primates human childhood is extremely protracted, essentially representing a 'pause' of development [@delgiudice2009], perhaps as a way to reduce the burden of metabolic requirements on parents with multiple offspring and to reduce feeding competition with adults, but that is also associated with more rapid post-pubertal development [@gurven2006].
-From a birds-eye-view, this places the psychology and behavior of the adolescent at a transition point between a relatively quiescent period, and period of acceleration into an adult motivational frame. 
-This evolutionary developmental transition is accompanied by increasing access to (and ability to exploit) the normative cultural expectations, practices, and products of adulthood such as resource acquisition (and accompanying privileges and anxieties), familial care, courtship, social group bonding and hierarchy formation, physical mobility (e.g., public transit, automobiles), and intoxicants.
-Here, I focus on two motivations that are, first, central to ultimate reproductive success and, second, likely to be accentuated by or the result of adolescent development: mate-seeking and status.
-Although this focus is of theoretical interest, it is motivated by a practical concern for the adverse health outcomes that some adolescent-emergent behaviors are associated with.
+The impact of evolutionarily relevant motivations should be considered especially well because selection pressure is likely to be a powerful force shaping biological predispositions, and individual differences, during this phase of development [@baltes1997;@mottus2018].
+Relative to other primates, human childhood is extremely protracted, essentially representing a 'pause' in development, with coincident more-rapid post-pubertal development [@delgiudice2009].
+From a birds-eye-view, this places the psychology and behavior of the adolescent phase at a transition point between a relatively quiescent period, and period of acceleration into an adult motivational frame. 
+Particularly striking changes during this period of development include increasing propensity for adult-like behaviors, such as the inception of  sexual and romantic behavior [@cavazos-rehg2009;@harden2014a], and navigation of shifting social networks and status hierarchies [@cairns1995;@steinberg2001] with possible consequences for adult success [@shi2017].
+These behavioral changes are accompanied by increasingly adult-like normative cultural expectations, and practices, related to resource acquisition (and accompanying privileges and anxieties), familial care, courtship, social group bonding and hierarchy formation, as well access to adult-like physical mobility (e.g., public transit, automobiles), and intoxicants.
+Essentially, as adolescents develop more adult-like motivations for mate-seeking and status, they also begin to gain access to adult-like means for enacting those motivations, many of which come with health-relevant risks.
 
-Two motivational domains appear often in the introductions (and occasionally also in the discussion sections) of research on adolescence: sex and status.
-With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence, though very little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017].
-Status is studied more directly, with many articles focusing on popularity antecedents [@lafontana2002;@LiChineseAmericanchildren2012;@OwensTheymightnot2009;@rose2004], and consequences [@allen2005;@cillessen2014;@meuwese_friends_2017].
-Though there is a long history of research on motivation in psychology, very little contemporary adolescent research situates mate-seeking and status in a broader motivational framework.
+To some extent, the impact on adolescent behavior of motivations for status and mates has been either acknowledged or studied.
+With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence,.
+However, little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017], though this may be in part due to the political sensitivity of this topic [@harden2014a].
+Status is studied more directly, with many articles focusing on the antecedents of popularity [@lafontana2002;@LiChineseAmericanchildren2012;@OwensTheymightnot2009;@rose2004], as well as on possible consequences [@allen2005;@cillessen2014;@meuwese_friends_2017].
+Even so, though there is a long history of research on motivation in psychology, very little contemporary adolescent research situates mate-seeking and status in a broader motivational framework.
 
-The fundamental social motives (FSM) framework proposed by @kenrick2010 may be helpful for understanding differential effects of both domains, as it parses motives into a small set of domains.
+The fundamental social motives (FSM) framework proposed by @kenrick2010 may be helpful for understanding differential effects of both domains, as it parses motives into a small set based on adaptive problems humans are likely to face.
 These domains might be said to be fundamental in the sense that they are, plausibly, evolved normative psychological inputs on value computations during decision making processes that have relevance for survival and reproduction.
-The evolutionary-psychological framework is especially important for understanding adolescence, a developmental period that may be considerably sensitive to selection pressure [@ellis2012;@suleiman2016].
-Using the FSM framework will allow integration of findings from this work into the broader evolutionary psychology conversation that is beginning to arise in adolescent research. 
+The evolutionary-psychological framework is especially important for understanding adolescence, a developmental period that may be considerably sensitive to selection pressure [@baltes1997;@ellis2012;@suleiman2016].
+Using the FSM framework allows integration of findings from this work into the broader evolutionary psychology conversation that is beginning to arise in adolescent research.
 
-Another advantage of the FSM approach is that it parses motivations by relationships.
+Another advantage of the FSM approach is that it parses motivations by the functional importance of the motivation with regard to likely adaptive problems.
 There are many traditions that would place status motives and mate-seeking motives within one of two broad domains, respectively, such as agency and communion [@bakan1966], power and intimacy [@mcadams_power_1985], and many others [@wiggins1991].
-However, those traditions are not able to capture the distinct challenges inherent in specific subsets of social relations, and thus the distinct motivational adaptations that may plausibly arise from those challenges.
-The FSM approach organizes the measurement of motivation around these broad relationship categories, making it especially useful for thinking about adolescence, which is proposed to be marked by a restructuring of the social world [@nelson2005;@nelson2016] -- perhaps as a consequence of developing motivations.
-Indeed, the FSM framework is especially useful given how different motives plausibly map onto important relationships at different developmental stages (specifically, mate-seeking as a result of puberty, but also, e.g., kin care, later, in adulthood).
+However, those traditions are not able to capture the distinct challenges inherent in various social relations, which map onto important relationships at different developmental stages (specifically, mate-seeking as a result of puberty, but also, e.g., kin care, later, in adulthood).
+The fact that the FSM approach organizes the measurement of motivation around broad relationship categories, may make it especially useful for thinking about adolescence, which is proposed to be marked by a restructuring of the adolescents place in the social world [@nelson2005;@nelson2016].
 
 The relationship-centric approach of FSM highlights that these motives hypothesized to develop and gain importance during adolescence are inherently interpersonal.
 Depending on how status is defined, it refers to either the degree to which one is liked or recognized by one's peers, or the degree to which one has the respect or esteem of one's peers [@lafontana2002;@srivastava2011].
@@ -83,11 +78,11 @@ Indeed, it is then within the context of these interpersonal networks that subse
 Literature on risk-taking behavior directly implicates both mate-seeking and status motivation domains in risky sexual behaviors and a variety of potentially status-related health-risking behaviors such as substance use.
 For example, in a study which assessed perceptions of the sexual-self among adolescents, there was an association between increasing sexually-motivated self-perceptions and various forms of sexual risk-taking [@buzwell1996].
 With regard to status, there is some evidence consistent with the idea that adolescents who have high popularity as rated by peers may try to maintain their status through health-risking behaviors [@mayeux2008].
-Beyond health-risking behaviors, these motives may also be crucial ingredients in understanding a whole class of risk-taking that is less negatively valued, including but not limited to extending one's social and physical environment beyond one's childhood home [@sercombe2014].
+Beyond health-risking behaviors, these motives may also be crucial ingredients in understanding a whole class of risk-taking that is less negatively valued, including but not limited to risks taken in service of extending one's social and physical environment beyond one's childhood home [@sercombe2014].
 Although the above literature acknowledges motivation, and measures related constructs, mate-seeking and status _motives_ are rarely a direct target of measurement.
 There is a need for research investigating how adolescent learning and exploration is shaped in the presence of stimuli which are motivationally relevant to their developmental stage.
 
-# Status motive
+## Status motive
 
 Status during adolescence has been studied from a variety of perspectives, including perceptions, structure, strategies, and outcomes [@allen2005;@jarvinen_adolescents_1996;@lafontana2010;@savin-williams1979;@SelfhoutEmergingLateAdolescent2010;@underwood1996].
 Though status motives have been addressed, self-report about status priorities are most common.
@@ -98,7 +93,7 @@ One interesting possibility is that status motives are constant throughout early
 Nonetheless, as adolescents proceed developmentally toward adulthood, social status plays an increasingly important role in determining many types of opportunities.
 For this reason, the motivation to explore and master status hierarchies, and perhaps gain status, remains an important target for research.
 
-# Mate-seeking motive
+## Mate-seeking motive
 
 Puberty marks the beginning of sexual maturation of an individual, and the beginning of the adolescent developmental period [@susman_puberty_2009].
 Though there has been extensive research on the importance of romantic and sexual relationships during adolescence, peer and parent influences, risky patterns of sexual behavior, and health-relevant outcomes [@capaldi_heterosexual_2002;@schalet2011;@suleiman2015], there has been very little research on sexual development as it relates to motivation.
@@ -107,45 +102,45 @@ Most work to date has focused on risk factors for unsafe sex unrelated to motiva
 This neglects the importance of sexual motivation (i.e., desire) in the development of an empowered and responsible sexual identity, impeding efforts to reduce health-risks through sexual education [@fine2006].
 Although sexual desire is recognized rhetorically as an important component in emerging adolescent romantic and sexual behavior, its direct interrogation through either behavioral or self report measures is limited.
 Likewise, the role of mate-seeking motives in the exploratory behavior characteristic of adolescence is also under-studied.
+As with status, reliance on self-report may not be optimal given both the socially and politically sensitive nature of this topic.
 
 # Reinforcement learning
 
 As noted above, research on status and mate-seeking motives during adolescence is either largely absent, or reliant on self-report.
 The field would benefit greatly from a new measure that provides an alternative method to capture individual and developmental differences in the salience of these motives across the transition from childhood through adolescence and into adulthood.
-A primary focus of this dissertation is the design and validation of a new behavioral measure to do so.
-The measure described below experimentally manipulates motivational domain-relevant cues during reinforcement learning.
-The basic reinforcement learning paradigm has been well described in both humans and rodents in the behavioral economics literature [@collins_how_2012;@glimcher2009;@jones2011a].
-The salience of stimuli in such a paradigm directly impacts learning rates [@cunningham2012].
-The premise of this new measure is that linking a stimulus to motivationally relevant information will affect the salience of that stimulus in proportion to the strength of the motivation.
-By measuring how learning rates are potentiated by this motivational framing, it may be possible to measure a low-level behavioral indicator of status and mate-seeking motives.
-Moreover, this would demonstrate that status and mate-seeking motives directly affect reinforcement learning, and so, perhaps, shape exploratory behavior postulated to be a primary task of this developmental period.
+A primary focus of this work is therefore the design and validation of a new behavioral measure to do so.
+The measure, described below, uses a standard reinforcement learning paradigm and experimentally manipulates the extent to which learning targets are relevant to different motivational domains.
+The basic reinforcement learning paradigm has been well described in both humans and rodents [@collins_how_2012;@glimcher2009;@jones2011a].
+The salience of stimuli in such a paradigm directly impacts learning [@grossberg1975;@mackintosh1975;@cunningham2012].
+The premise of this new measure is that linking a learning target to motivationally relevant information will affect the salience of that target in proportion to the strength of the motivation.
+By measuring how learning rates are potentiated by this motivational framing, it may be possible to measure a behavioral indicator of psychologically basic status and mate-seeking motives.
+Moreover, this would demonstrate that status and mate-seeking motives directly affect reinforcement learning, and so, perhaps, shape exploratory behavior, learning, and decision-making during adolescence.
 
 In designing an appropriate reinforcement learning task, it is important to consider that the optimal parameters governing the accumulation of information will differ depending on the stability of the association between the response to a stimulus and reward receipt (assuming the association is probabilistic).
 For example, in the context of a task with a stable association, after some number of successful pairings, the learner should no longer be tempted to switch her response, thus ensuring she is not fooled by a random run of no-reward feedback.
-However, if the association is not stable, and does actually switch (as is the case in reversal learning paradigms), the learner should optimally have a lower threshold for switching her association between a particular response and expected reward.
+However, if the association is not stable, and does actually switch (as is the case in reversal learning paradigms), the optimal learner should have a lower threshold for switching her association between a particular response and expected reward.
 For the learning strategy captured by the the proposed task to have relevance for our understanding of real-world behavior, its association stabilities should roughly correspond to the stability of status-relevant and mate-seeking-relevant associations in the environment.
 
 Both sociometric status and romantic relationships are fairly rank-order stable throughout adolescence.
-In a study of roughly 300 adolescents with high sociometric status, estimates of the year-to-year stability from 6th-12th grade ranged between .51 and .72, with stability across all but a single 1-year interval above .6 [@cillessen2006].
+In a study of roughly 300 adolescents with high sociometric status, estimates of the year-to-year stability from 6th-12th grade ranged between .51 and .72, with stability across all except a single 1-year interval above .6 [@cillessen2006].
 The percent of adolescents reporting romantic relationships lasting 11 months or longer, an indicator of stability relevant for this task, increases from 20% at an age of 14 years, to roughly 60% at 16 years [@collins2003].
-Given the temporal dimensions of the proposed task, it is reasonable to assume that participants would not prioritize a learning strategy more appropriate to a reversal-learning task.
+Given the temporal scale of the proposed task, it is reasonable to assume that participants would not prioritize learning strategies that are especially sensitive to changing associations.
 
 # Aims
 
-Motivations have been under-studied in efforts to understand changes in behavior during adolescence, many of which have consequences for health and well-being.
-Relevant motivations that are often either peripherally or rhetorically identified in the literature are well captured by the evolutionary-psychological approach codified in the FSM framework.
-Status and mate-seeking are especially relevant for the adolescent development period.
-As learning and exploration are thought to be a crucial aspect of the importance of behavioral changes in adolescents, examining these motives using reinforcement learning provides the opportunity to better understand the motives themselves through a behavioral method, and also to understand the impact of motives on a mechanism related to learning and exploration.
-Broadly speaking, the goal of this dissertation is to investigate the appropriateness of this reinforcement learning task, as well as the ways in which these motives (measured in multiple ways) relate to attitudes and behaviors.
+Motivations have been under-studied in efforts to understand changes in decision-making during adolescence, many of which have consequences for health and well-being.
+Relevant motivations that are often either often only peripherally identified in the literature are well captured by the evolutionary-psychological approach codified in the FSM framework.
+Mate-seeking and status motives are especially relevant for the adolescent development period.
+Because learning and exploration are thought to be a crucial aspect of the importance of behavioral changes in adolescents, examining these motives using reinforcement learning provides the opportunity to better understand the motives themselves through a behavioral method, and also to understand the impact of motives on a mechanism related to learning and exploration.
+Broadly speaking, the goal of this work is to investigate the appropriateness of this reinforcement learning task, as well as the ways in which these motives (measured in multiple ways) relate to attitudes and behaviors.
 
-*Aim 1a: Does framing reinforcement learning with (mate-seeking and status) motivational contexts sensitize the learner and potentiate learning?* Relevance of the stimuli in the reinforcement learning paradigm for individuals' underlying motives should affect the salience of stimuli, and thus also the rate at which individuals learn.
-On average, I expect information related to status and mate-seeking motives to be motivationally relevant, and to potentiate learning over and above minimally-social information.
+*Aim 1a: Does framing reinforcement learning targets with (mate-seeking and status) motive-related words increase stimulis salience and potentiate learning?* Relevance of the stimuli to individuals' underlying motives should affect the salience of stimuli, and thus also the rate at which individuals learn.
+On average, it is expected that information related to status and mate-seeking motives will be motivationally relevant, and will potentiate learning over and above minimally-social information.
 
-*Aim 1b: How does motivational potentiation of learning covary with development?* It is likely that both status and mate-seeking motives increase between childhood and adolescence.
-If differences in learning rates between stimuli with social and minimally-social relevance reflect underlying motives, then I expect that learning potentiation will increase from early to late adolescence.
+*Aim 1b: How does motive potentiation of learning covary with development?* It is likely that both status and mate-seeking motives increase between childhood and adolescence.
+If differences in learning rates between stimuli with social and minimally-social relevance reflect underlying motives, then it is expected that learning potentiation due to motive-framing will increase from early to late adolescence.
 
-*Aim 2: Does the motivational potentiation of learning relate to a constellation of self-report measures that theoretically ought to demonstrate convergence? Specifically, (i) what is the relation between motivational potentiation and self-report fundamental social motives; (ii) what is the relation between self-report fundamental social motives and motive-congruent outcomes; and (iii) what is the relation between motivational potentiation and motive-congruent outcomes.*  Measures of such constructs include self-reported fundamental social motives, self-report health risk-behaviors, and intermediate attitudes about the social consequences of health-risking behaviors.
-I hypothesize, broadly speaking, that there will be a positive correlation between self-report motives and differences in learning in motive conditions, and that attitudes will moderate the relation between motives (both self-report and as measured in learning behavior) and risk-behavior outcomes.
+*Aim 2: Does the motive potentiation of learning relate to a constellation of self-report measures that theoretically ought to demonstrate convergence? Specifically, (i) what is the relation between motive potentiation and self-report social motives; (ii) what is the relation between self-report social motives and motive-congruent health-related outcomes; and (iii) what is the relation between motive potentiation and motive-congruent health-related outcomes.*  It is expected, broadly speaking, that there will be a positive correlation between self-report measures of motives and outcomes, and differences in learning between social-motive conditions versus the baseline condition.
 
 <!--stackedit_data:
 eyJwcm9wZXJ0aWVzIjoiZXh0ZW5zaW9uczpcbiAgcHJlc2V0Oi
